# runnb

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/runipynb/: __init__.py
src/runnb/: _core.py
tests/: conftest.py  test_magics.py  test_run_notebook.py
tests/fixtures/: basic.ipynb  cell_magic_capture.ipynb  cell_magic_html.ipynb  cell_magic_javascript.ipynb  cell_magic_latex.ipynb  cell_magic_markdown.ipynb  cell_magic_svg.ipynb  cell_magic_timeit.ipynb  cell_magic_writefile.ipynb  helper.py  line_magic_alias_magic.ipynb  line_magic_env.ipynb  line_magic_ext_lifecycle.ipynb  line_magic_load_ext.ipynb  line_magic_psearch.ipynb  line_magic_pwd.ipynb  line_magic_reset_selective.ipynb  line_magic_set_env.ipynb  line_magic_sx.ipynb  line_magic_timeit.ipynb  line_magic_who_ls.ipynb  line_magic_xdel.ipynb  line_magic_xmode.ipynb  raises.ipynb  reads_local_file.ipynb  with_magics.ipynb
