[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runnb"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.0",
    "nbformat>=5.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/runnb"]
